--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 streamlit==1.16.0
-pandas==1.4.3
-numpy==1.22.4
-Pillow==9.1.1
-shapely==1.8.4
-torch==1.12.0
-torchvision==0.13.0
+pandas==1.5.3
+numpy==1.23.5
+Pillow==9.3.0
+shapely==1.8.5.post1
+torch==2.0.0
+torchvision==0.14.0
 opencv-python-headless==4.6.0.66
-matplotlib==3.5.2
+matplotlib==3.6.2
 detectron2==0.6
-boto3==1.24.7
-tqdm==4.64.0
+boto3==1.26.24
+tqdm==4.64.1
