--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 streamlit==1.16.0
-pandas==1.5.3
-numpy==1.23.5
-Pillow==9.3.0
-shapely==1.8.5.post1
-torch==2.0.0
-torchvision==0.14.0
-opencv-python-headless==4.6.0.66
-matplotlib==3.6.2
+pandas>=1.5.3
+numpy>=1.23.5
+Pillow>=9.3.0
+shapely>=1.8.5.post1
+torch>=2.0.0
+torchvision>=0.15.1
+opencv-python-headless>=4.6.0.66
+matplotlib>=3.6.2
 detectron2==0.6
-boto3==1.26.24
-tqdm==4.64.1
+boto3>=1.26.24
+tqdm>=4.64.1
+
