--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,8 @@ matplotlib>=3.6.2
 boto3>=1.26.24
 tqdm>=4.64.1
 
+#'git+https://github.com/facebookresearch/detectron2.git' #detectron2
 
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.10/index.html
+detectron2
 
