--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-torch==2.2.2
+opencv-contrib-python
 streamlit
 pandas
 numpy
 Pillow
 shapely
-torchvision
-opencv-python-headless
-matplotlib
-boto3
-tqdm
-
-#'git+https://github.com/facebookresearch/detectron2.git' #detectron2
-
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.10/index.html
-
-
